  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2006/05/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function pr##_IdMap_freeAll() to GWEN_IDMAP macros which e.g. expands
  to GWEN_Buffer_IdMap_freeAll() for
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)".
  This function frees all objects stored in the GWEN_IDMAP and frees the 
  GWEN_IDMAP itself.
- added function pr##_IdMap_FreeItems() to GWEN_IDMAP macros which e.g. 
  expands to GWEN_Buffer_IdMap_FreeItems() for
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)".
  This function frees all objects stored in the GWEN_IDMAP and clears the 
  GWEN_IDMAP (e.g. make it contain no ids afterwards).
- src/storage: added argument "reason" to GWEN_StoStorage_UnregisterClient(),
  which is now logged in the new log messages beginSession and endSession
- src/base/idlist: added functions which allow iterating over 
  const GWEN_IDLIST as well


2006-05-19   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Let svn write the revision number directly into
	here on each svn update. Fixes all problems with using svninfo.


2006/05/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added base/idmap: This code allows for fast and efficient storage of
  pairs of [32-bit ID and a void* pointer].
  Such pairs can be set, reset and sought. This new class also allows to
  fastly iterate over the pairs.
  It allows for multiple storage algos. The first algo uses 8-step pointer
  tables of 16 entries per table.
- added typesafe macros for idmap (like those macros for GWEN_LIST2), e.g.