@@ -35,7 +35,9 @@
 #include <stdarg.h>
 #include <assert.h>
 #include <stdio.h>
-#include <strings.h>
+#ifdef HAVE_STRINGS_H
+# include <strings.h>
+#endif
 #include <gwenhywfar/misc.h>
 
 
