@@ -37,7 +37,9 @@
 #include <gwenhywfar/misc.h>
 #include <gwenhywfar/text.h>
 #include <stdlib.h>
-#include <unistd.h>
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
 #include <string.h>
 #include <errno.h>
 
