@@ -39,7 +39,9 @@
 #include <gwenhywfar/text.h>
 #include <gwenhywfar/waitcallback.h>
 #include <stdlib.h>
-#include <unistd.h>
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
 #include <string.h>
 #include <errno.h>
 
