@@ -36,7 +36,9 @@
 #include <gwenhywfar/path.h>
 #include <gwenhywfar/buffer.h>
 
-#include <unistd.h>
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
 #ifdef HAVE_SYS_STAT_H
 # include <sys/stat.h>
 #endif
