@@ -42,7 +42,9 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 
-#include <unistd.h>
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
 #include <errno.h>
 #include <string.h>
 
