@@ -53,7 +53,9 @@
 #ifdef HAVE_FCNTL_H
 # include <fcntl.h>
 #endif
-#include <unistd.h>
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
 
 
 
