@@ -7,6 +7,12 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2006-05-22   Christian Stimming <stimming@tuhh.de>
+
+	* src/: Add include file ifdefs, which might be necessary on some
+	windows (MSVC) platforms.
+
+
 2006/05/20: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added function pr##_IdMap_freeAll() to GWEN_IDMAP macros which e.g. expands
